# GTK-QT-program-framework

./: CMakeLists.txt  README.md  example.config
assets/fonts/: to have.md
assets/textures/effects/: to have.md
assets/textures/ui/: to have.md
assets/themes/: dark.theme.json  default.theme.json  light.theme.json  neon.theme.json  redshift_presets.json
docs/: animation_system.md  api_reference.md  architecture_overview.md  compute_effects.md  config_system.md  framegraph.md  gpu_ui_rendering_system.md  index.md  platform_backends.md  rendering_pipeline.md  theme_system.md  threading_model.md  tutorials.md
examples/basic_window/: CMakeLists.txt  README.md  main.cpp
examples/config_live_reload/: CMakeLists.txt  app.config  main.cpp
examples/editor_app/: CMakeLists.txt  InputRouter.h  editor.config  main.cpp
examples/editor_app/core/: EditorApplication.cpp  (+5 more)
examples/effects_demo/: CMakeLists.txt  blur_test.json  demo.config  glow_test.json  main.cpp  shadow_test.json
examples/framegraph_demo/: CMakeLists.txt  README.md  framegraph_visual.json  main.cpp
examples/gpu_ui_demo/: CMakeLists.txt  README.md  main.cpp
examples/multi_window_demo/: CMakeLists.txt  README.md  main.cpp  window_config.json  window_layout.json
examples/theme_demo/: CMakeLists.txt  main.cpp  themes.config
include/MyFramework/: Layouts.h  Signals.h
src/animation/: Animation.cpp  Animator.cpp  Easing.cpp  KeyframeTrack.cpp  PropertyAnimation.cpp  Timeline.cpp
src/config/: Config.cpp  ConfigLoader.cpp  ConfigLoader.h  ConfigParser.cpp  ConfigSerializer.cpp  ConfigWatcher.cpp
src/core/: Application.cpp  EventDispatcher.cpp  Object.cpp  Signal.cpp  Timer.cpp
src/effects/: BlurEffect.cpp  EffectStack.cpp  FadeEffect.cpp  ShadowEffect.cpp
src/platform/: platform.cpp  windowimpl.cpp
src/render/: DrawCommand.cpp  FrameExecutor.cpp  FrameGraph.cpp  FramePass.cpp  FrameResource.cpp  RenderTarget.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/system_ui/: SystemUIManager.cpp  SystemUIManager.h  Taskbar.cpp  Taskbar.h
src/theme/: Color.cpp  RedshiftManager.cpp  RedshiftManager.h  Theme.cpp  ThemeBlender.cpp  ThemeManager.cpp  ThemeParser.cpp  ThemeScheduler.cpp  ThemeTransition.cpp
src/threading/: CommandScheduler.cpp  JobSystem.cpp  ThreadPool.cpp
src/ui/: GPUUIRenderer.cpp  Label.cpp  Layout.cpp  RenderTree.cpp  Widget.cpp  Window.cpp  WindowEvents.cpp
src/utils/: Color.cpp  FileSystem.cpp  Logger.cpp  Math.cpp  Profiler.cpp  String.cpp  Time.cpp
tests/test_animation/: CMakeLists.txt  main.cpp  test_easing.cpp  test_property_animation.cpp  test_timeline.cpp
tests/test_compute_effects/: main.cpp  test_blur.cpp  test_glow.cpp  test_redshift.cpp  test_shadow.cpp
tests/test_config/: CMakeLists.txt  main.cpp  test_config_parser.cpp  test_config_validation.cpp  test_live_reload.cpp  test_timeframe_parsing.cpp
tests/test_core/: CMakeLists.txt  main.cpp  test_event_dispatcher.cpp  test_logger.cpp  test_object.cpp  test_signal_system.cpp  test_timer.cpp
tests/test_framegraph/: main.cpp  test_execution_order.cpp  test_multi_pass_rendering.cpp  test_pass_execution.cpp  test_resource_dependencies.cpp
tests/test_integration/: CMakeLists.txt  main.cpp  test_full_app_boot.cpp  test_multi_window_support.cpp  test_theme_live_reload_ui.cpp  test_widget_render_pipeline.cpp
tests/test_platform/: CMakeLists.txt  main.cpp  test_backend_switching.cpp  test_input_events.cpp  test_window_creation.cpp
tests/test_render/: CMakeLists.txt  main.cpp  test_draw_commands.cpp  test_framegraph.cpp  test_render_target.cpp  test_renderer.cpp  test_shader_pipeline.cpp  test_texture_upload.cpp
tests/test_theme/: CMakeLists.txt  main.cpp  test_theme_blending.cpp  test_theme_fallback.cpp  test_theme_parser.cpp  test_theme_scheduler.cpp
tests/test_threading/: main.cpp  test_command_scheduler.cpp  test_jobsystem.cpp  test_parallel_rendering.cpp  test_threadpool.cpp
tests/test_ui/: CMakeLists.txt  main.cpp  test_button_interaction.cpp  test_label_rendering.cpp  test_layout_engine.cpp  test_widget_hierarchy.cpp  test_window_events.cpp
tools/config_editor/: CMakeLists.txt  README.md
tools/config_editor/resources/: default_layout.json
tools/config_editor/src/: ConfigEditorApp.cpp  ConfigEditorApp.h  ConfigTreeModel.cpp  ConfigTreeModel.h  ConfigView.cpp  ConfigView.h  LivePreviewPanel.cpp  main.cpp
tools/config_editor/src/ui/: EditorWindow.cpp  EditorWindow.h  TimeFrameEditor.cpp
tools/config_editor/ui/: ColorPicker.cpp  ThemeSlotEditor.cpp
tools/framegraph_debugger/: CMakeLists.txt  README.md
tools/framework_inspector/: CMakeLists.txt  README.md
tools/framework_inspector/src/: EventMonitor.cpp  EventMonitor.h  InspectorApp.cpp  InspectorApp.h  PropertyEditor.cpp  PropertyEditor.h  RenderDebugOverlay.cpp  WidgetTreeView.cpp  WidgetTreeView.h  main.cpp
tools/framework_inspector/ui/: InspectorWindow.cpp  InspectorWindow.h  LayoutDebugger.cpp  LayoutDebugger.h
tools/shader_compiler/: CMakeLists.txt  README.md
tools/shader_compiler/backends/: MetalCompiler.cpp  OpenGLCompiler.cpp  VulkanCompiler.cpp
tools/shader_compiler/includes/: commonconstants.glsl
tools/shader_compiler/includes/compute/: glow.glsl  sampling.glsl  workgroup.glsl
tools/shader_compiler/includes/framegraph/: resource_bindings.glsl
tools/shader_compiler/includes/platform/: metal.glsl  opengl.glsl
tools/shader_compiler/includes/ui/: clipping.glsl  ui_common.glsl
tools/shader_compiler/src/: GLSLParser.cpp  GLSLParser.h  OptimizationPass.cpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderIR.cpp  ShaderIR.h  main.cpp
tools/theme_editor/: CMakeLists.txt  README.md
tools/theme_editor/resources/: default_theme.json
tools/theme_editor/resources/presets/: dark.json  light.json  neon.json
tools/theme_editor/src/: GradientEditor.cpp  GradientEditor.h  ThemeCanvas.cpp  ThemeCanvas.h  ThemeEditorApp.cpp  ThemeEditorApp.h  ThemeTimelineView.cpp  ThemeTimelineView.h  main.cpp
tools/theme_editor/ui/: ColorStopWidget.cpp  ColorStopWidget.h  ThemeWindow.cpp  ThemeWindow.h
tools/ui_inspector/: CMakeLists.txt  README.md
(+197 files in other folders)
